<resources>
    <string name="app_name">Work_Out_Together</string>

    <string name="text_left_nav_profile">動態</string>
    <string name="text_left_nav_myevent">我的活動</string>
    <string name="text_left_nav_mycourse">我的課程</string>
    <string name="text_left_nav_myplan">我的計畫</string>
    <string name="text_Home">Home</string>
    <string name="text_News">News</string>
    <string name="text_Map">Map</string>
    <string name="text_Settings">Settings</string>

    <string name="text_UserName">David Wu</string>
    <string name="text_Email">thisisfake@gmail.com</string>

    <string name="text_Open">Open</string>
    <string name="text_Close">Close</string>

    <!-- login activity-->
    <string name="text_btnNewAccount">Create a new account</string>
    <string name="text_btnLogin">Login</string>
    <string name="hint_etUser"> User name</string>
    <string name="hint_etPassword"> Password</string>
    <string name="hint_etUrl">Server URL</string>

    <!--error messages-->
    <string name="msg_InvalidUserOrPassword">Invalid user name or password</string>
    <string name="msg_NoNetwork">No network connection available</string>
    <string name="msg_NoProfileFound">No profile found</string>

    <!--button text-->
    <string name="text_btnCollect">收藏</string>
    <string name="text_btnComment">留言</string>
    <string name="card_btnMargin">20dp</string>

    <!--bottom navbar menu texts-->
    <string name="text_bottom_navbar_item_home">首頁</string>
    <string name="text_bottom_navbar_item_plan">計畫</string>
    <string name="text_bottom_navbar_item_event">活動</string>
    <string name="text_bottom_navbar_item_course">課程</string>

    <string name="text_default_profile_text">我是doge, doge是我</string>
</resources>
