<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/text_bottom_navbar_item_home"
        android:id="@+id/bottom_navbar_item_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"/>

    <item
        android:title="@string/text_bottom_navbar_item_event"
        android:id="@+id/bottom_navbar_item_event"
        android:orderInCategory="2"
        android:icon="@drawable/ic_event"/>

    <item
        android:title="@string/text_bottom_navbar_item_course"
        android:id="@+id/bottom_navbar_item_course"
        android:orderInCategory="3"
        android:icon="@drawable/ic_lesson"/>

    <item
        android:title="@string/text_bottom_navbar_item_plan"
        android:id="@+id/bottom_navbar_item_plan"
        android:orderInCategory="4"
        android:icon="@drawable/ic_calendar"/>

</menu>